Tweaks for Mockito on Java 21