@@ -399,7 +399,9 @@
           <excludes>
             <exclude>**/*TestSuite.java</exclude>
           </excludes>
+          <argLine>-XX:+EnableDynamicAgentLoading</argLine>
           <systemPropertyVariables>
+            <net.bytebuddy.experimental>true</net.bytebuddy.experimental>
             <rabbitmqctl.bin>DOCKER:rabbitmq</rabbitmqctl.bin>
           </systemPropertyVariables>
         </configuration>
